--- a/style.css
+++ b/style.css
@@ -1,26 +1,35 @@
+body {
+  background-image: url("http://i.imgur.com/B3nAM6x.jpg?1"); }
+
+#sticker {
+  width: 30%;
+  height: 15em;
+  margin: auto; }
+
+#top {
+  text-align: center;
+  background-color: #0a0a1b; }
+
+#electro {
+  float: left;
+  color: #580405;
+  margin-top: 4em;
+  margin-left: 2em; }
+
+#spacerock {
+  float: right;
+  color: #580405;
+  margin-top: 4em;
+  margin-right: 2em; }
+
 #wrapper {
   width: 90%;
   margin-left: auto;
   margin-right: auto;
   position: relative; }
 
-#top {
-  margin: 5px;
-  border: 2px solid black;
-  background: #596163;
-  font-size: 2em;
-  font-weight: bold;
-  text-align: center;
-  height: 5em; }
-
 #content {
   margin: 5px;
-  border: 2px solid black;
-  background: #032a4a;
-  text-align: center;
-  color: white;
-  width: 50%;
-  height: 20em;
   display: inline-block; }
 
 #leftnav {
@@ -35,14 +44,22 @@
 
 #more {
   margin: 5px;
-  border: 2px solid black;
-  background: #383c07;
-  text-align: center;
-  color: white;
-  width: 25%;
+  width: 24%;
   height: 20em;
   display: inline-block;
   float: right; }
+
+#bestbeef {
+  margin-top: 10px;
+  margin-right: 10px;
+  width: 95%;
+  height: 8em; }
+
+#flydoitch {
+  margin-top: 10px;
+  margin-right: 10px;
+  width: 95%;
+  height: 8em; }
 
 #end {
   clear: both;
