--- a/style.scss
+++ b/style.scss
@@ -1,27 +1,41 @@
+
+body {
+  background-image: url("http://i.imgur.com/B3nAM6x.jpg?1");
+}
+
+#sticker {
+  width: 30%;
+  height: 15em;
+  margin: auto;
+}
+
+#top {
+  text-align: center;
+  background-color: rgb(10, 10, 27);
+}
+
+#electro {
+  float: left;
+  color: rgb(88, 4, 5);
+  margin-top: 4em;
+  margin-left: 2em;
+}
+#spacerock {
+  float: right;
+  color: rgb(88, 4, 5);
+  margin-top: 4em;
+  margin-right: 2em;
+}
 #wrapper {
   width: 90%;
   margin-left: auto;
   margin-right: auto;
   position: relative;
 }
-#top {
-  margin: 5px;
-  border: 2px solid black;
-  background: rgb(89, 97, 99);
-  font-size: 2em;
-  font-weight: bold;
-  text-align: center;
-  height: 5em;
-}
+
 
 #content {
   margin: 5px;
-  border: 2px solid black;
-  background: rgb(3, 42, 74);
-  text-align: center;
-  color: white;
-  width: 50%;
-  height: 20em;
   display: inline-block;
 }
 
@@ -37,17 +51,26 @@
 }
 
 #more {
-  margin: 5px;
-  border: 2px solid black;
-  background: rgb(56, 60, 7);
-  text-align: center;
-  color: white;
-  width: 25%;
-  height: 20em;
-  display: inline-block;
-  float: right;
-
+margin: 5px;
+width: 24%;
+height: 20em;
+display: inline-block;
+float: right;
 }
+
+#bestbeef {
+  margin-top: 10px;
+  margin-right: 10px;
+  width: 95%;
+  height: 8em;
+}
+#flydoitch {
+  margin-top: 10px;
+  margin-right: 10px;
+  width: 95%;
+  height: 8em;
+}
+
 
 #end {
   clear: both;
