--- a/style.scss
+++ b/style.scss
@@ -10,21 +10,22 @@ body {
 }
 
 #top {
+  margin-top: 20px;
   text-align: center;
-  background-color: rgb(10, 10, 27);
+  background-color: rgba(0, 0, 8, 0.9);
 }
 
 #electro {
   float: left;
   color: rgb(88, 4, 5);
   margin-top: 4em;
-  margin-left: 2em;
+  margin-left: 4em;
 }
 #spacerock {
   float: right;
   color: rgb(88, 4, 5);
   margin-top: 4em;
-  margin-right: 2em;
+  margin-right: 4em;
 }
 #wrapper {
   width: 90%;
@@ -42,12 +43,30 @@ body {
 #leftnav {
   float: left;
   margin: 5px;
-  border: 2px solid black;
-  background: rgb(21, 108, 82);
   text-align: center;
-  color: black;
   width: 20%;
   height: 20em;
+}
+
+ul {
+  list-style-type: none;
+  float: left;
+}
+#leftnav li {
+  margin: 10px;
+  font-size: 25px;
+  padding: 5px;
+  background-color: rgba(0, 0, 8, 0.9);
+}
+
+#leftnav li:hover {
+  color: rgb(180, 4, 4);
+  font-size: 30px;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(88, 4, 5);
 }
 
 #more {
@@ -75,9 +94,13 @@ float: right;
 #end {
   clear: both;
   margin: 5px;
-  border: 2px solid black;
-  background: rgb(108, 95, 207);
+  background: linear-gradient(
+	-154.840698083968deg,
+	rgba(6,8,25,.9) 6.3622%,
+	rgba(4,4,20,0.44) 46.330%,
+	rgba(7,7,8,.9) 88.744%);
   color: white;
   text-align: center;
   height: 5em;
+  margin-bottom: 20px;
 }
