--- a/style.css
+++ b/style.css
@@ -15,13 +15,15 @@ body {
   float: left;
   color: #580405;
   margin-top: 4em;
-  margin-left: 4em; }
+  margin-left: 4em;
+  font-family: "Ubuntu", sans-serif; }
 
 #spacerock {
   float: right;
   color: #580405;
   margin-top: 4em;
-  margin-right: 4em; }
+  margin-right: 4em;
+  font-family: "Ubuntu", sans-serif; }
 
 #wrapper {
   width: 90%;
@@ -48,11 +50,11 @@ ul {
   margin: 10px;
   font-size: 25px;
   padding: 5px;
-  background-color: rgba(0, 0, 8, 0.9); }
+  background-color: rgba(0, 0, 8, 0.9);
+  font-family: "Ubuntu", sans-serif; }
 
-#leftnav li:hover {
-  color: #b40404;
-  font-size: 30px; }
+#leftnav a:hover {
+  color: white; }
 
 a {
   text-decoration: none;
@@ -76,6 +78,26 @@ a {
   margin-right: 10px;
   width: 95%;
   height: 8em; }
+
+#blackbars {
+  text-align: center; }
+
+canvas {
+  background: black;
+  margin-right: 15px;
+  border-radius: 50px; }
+
+#button {
+  background: black;
+  color: white;
+  border-radius: 50px;
+  outline: none; }
+
+#end p {
+  font-family: "Ubuntu", sans-serif; }
+
+#end a:hover {
+  color: white; }
 
 #end {
   clear: both;
