final component homework commit

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -103,7 +103,13 @@ canvas {
   margin-right: 15px;
   border-radius: 50px;
 }
-
+.nav {
+  color:rgb(113, 192, 213);
+}
+.nav div {
+  border: 1px solid white;
+  background-color: black;
+}
 #button {
   background: black;
   color: white;
