--- a/styles/style.css
+++ b/styles/style.css
@@ -87,6 +87,13 @@ canvas {
   margin-right: 15px;
   border-radius: 50px; }
 
+.nav {
+  color: #71c0d5; }
+
+.nav div {
+  border: 1px solid white;
+  background-color: black; }
+
 #button {
   background: black;
   color: white;
